# imap-upload

./: imap_upload.py  pyproject.toml
